--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "server.js",
   "type": "module",
+  "proxy": "http://localhost:3000",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "build":"cd client && npm install --force && npm run build"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "gh-pages": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
