changes to package.json

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "type": "module",
   "proxy": "http://localhost:3000",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "build":"cd client && npm install --force && npm run build"
+
   },
   "keywords": [],
   "author": "",
